fix(contact): add spacing to empty angledrectange

--- a/app/contact/page.module.css
+++ b/app/contact/page.module.css
@@ -119,6 +119,10 @@
 	color: var(--white);
 }
 
+.spacing {
+	margin: 10vh 0;
+}
+
 /* Location Section */
 .locationSection {
 	width: 100%;
